Fix stretched images on mobiles

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -94,7 +94,7 @@ body {
 @media (max-width: 992px){
   .img-circle {
     width: 50px;
-    height: 50px;
+    height: auto;
   }
 }
 
